@@ -4,9 +4,10 @@
 - adapt to pytest-2.0 changes, rsyncdirs and rsyncignore can now
   only be specified in [pytest] sections of ini files, see "py.test -h"
   for details.
-- major internal refactoring to match the py-1.4 event refactoring
+- major internal refactoring to match the pytest-2.0 event refactoring
   - perform test collection always at slave side instead of at the master
   - make python2/python3 bridging work, remove usage of pickling
+- improve initial reporting by using line-rewriting
 - remove all trailing whitespace from source
 
 1.4
